# gmonitor-cli

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/: arch.d2
src/gmonitorcli/: __main__.py  cli.py  gpt.py  publisher.py  settings.py
