[project]
name = "gmonitorcli"
version = "0.1.0"
description = "Утилита для генерации команд для Linux-терминала"
requires-python = ">=3.13"
dependencies = [
    "faststream[cli,kafka]>=0.5.39",
    "pydantic-settings==2.9.1",
    "click>=8.1.8",
    "pyperclip>=1.9.0",
]

[project.scripts]
gmonitorcli = "gmonitorcli.cli:app"
